Mahout Change Log

Release 1.0 - unreleased

Release 0.9 - 2014-02-01

  MAHOUT-1411: Random test failures from TDigestTest (smarthi)

  MAHOUT-1410: clusteredPoints do not contain a vector id (smarthi, Andrew Musselman)

  MAHOUT-1409: MatrixVectorView has index check error (tdunning)

  MAHOUT-1402: Zero clusters using streaming k-means option in cluster-reuters.sh (smarthi)

  MAHOUT-1401: Resurrect Frequent Pattern mining (smarthi)

  MAHOUT-1400: Remove references to deprecated and removed algorithms from examples scripts (ssc)

  MAHOUT-1399: Fixed multiple slf4j bindings when running Mahout examples issue (sslavic)

  MAHOUT-1398: FileDataModel should provide a constructor with a delimiterPattern (Roy Guo via ssc)

  MAHOUT-1396: Accidental use of commons-math won't work with next Hadoop 2 release (srowen)

  MAHOUT-1394: Undeprecate Lanczos (ssc)

  MAHOUT-1393: Remove duplicated code from getTopTerms and getTopFeatures in AbstractClusterWriter (Diego Carrion via smarthi)

  MAHOUT-1392: Streaming KMeans should write centroid output to a 'part-r-xxxx' file when executed in sequential mode (smarthi)

  MAHOUT-1390: SVD hangs for certain inputs (tdunning)

  MAHOUT-1389: Complementary Naive Bayes Classifier not getting called when "-c" option is activated (Gouri Shankar Majumdar via smarthi)

  MAHOUT-1384: Executing the MR version of Naive Bayes/CNB of classify_20newgroups.sh fails in seqdirectory step (smarthi)

  MAHOUT-1382: Upgrade Mahout third party jars for 0.9 Release (smarthi)

  MAHOUT-1380: Streaming KMeans fails when executed in Sequential Mode (smarthi)

  MAHOUT-1379: ClusterQualitySummarizer fails with the new T-Digest for clusters with 1 data point (smarthi)

  MAHOUT-1378: Running Random Forest with Ignored features fails when loading feature descriptor from JSON file (Sam Wu via smarthi)

  MAHOUT-1377: Exclude JUnit.jar from tarball (Sergey Svinarchuk via smarthi)
